# life

./: CMakeLists.txt  README.md
CMakeModules/: FindbpScene.cmake  FindbpView.cmake
patterns/: deepcell.life  gardenofeden.life  kaber_tosser.life  methuselah.life  p94s.life  puffer.life  sawtooth.life  turing.life
shaders/: cell.frag  cell.geom  cell.vert
src/: CellRenderer.cpp  CellRenderer.h  Life.cpp  Life.h  Main.cpp
